# qreader

./: .gitignore  CMakeLists.txt  LICENSE
qreader/: CMakeLists.txt
src/qreader/: CMakeLists.txt  CommandLineArguments.h  commandlineparser.cpp  commandlineparser.h  main.cpp  qreader_en_US.ts  qreaderapplication.cpp  qreaderapplication.h
src/tests/: CMakeLists.txt  tst_commandlineparser.cpp
